--- a/app/src/main/res/layout/activity_student_main.xml
+++ b/app/src/main/res/layout/activity_student_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.student.StudentMainActivity">
+    tools:context=".ui.student.StudentMainActivity"
+    style="?android:attr/buttonBarStyle">
 
     <TextView
         android:id="@+id/idTitle3"
@@ -28,13 +29,14 @@
         android:text="@string/Start_Test"
         android:textColor="@color/white"
         android:textSize="32sp"
-        app:backgroundTint="@android:color/background_dark"
+        app:backgroundTint="@color/material_on_background_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.432"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.432" />
+        app:layout_constraintVertical_bias="0.432"
+        style="?android:attr/buttonBarButtonStyle"/>
 
     <Button
         android:id="@+id/buttonPrevResults"
@@ -44,20 +46,22 @@
         android:text="@string/See_past_results"
         android:textColor="@color/white"
         android:textSize="32sp"
-        app:backgroundTint="@color/black"
+        app:backgroundTint="@color/material_on_background_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonStart"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        style="?android:attr/buttonBarButtonStyle"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        style="?android:attr/buttonBarStyle">
 
         <Button
             android:id="@+id/buttonTest"
@@ -71,16 +75,13 @@
             android:textSize="42sp"
             app:backgroundTint="@android:color/holo_orange_dark"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            style="?android:attr/buttonBarButtonStyle"/>
 
         <Button
             android:id="@+id/buttonProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_toEndOf="@id/buttonTest"
-            android:layout_toRightOf="@id/buttonTest"
             android:layout_weight="1"
             android:baselineAligned="false"
             android:enabled="true"
@@ -90,6 +91,7 @@
             android:textSize="42sp"
             app:backgroundTint="@android:color/holo_orange_dark"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            style="?android:attr/buttonBarButtonStyle"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
