Added landscape views

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="activity_horizontal_margin">24dp</dimen>
     <dimen name="activity_vertical_margin">24dp</dimen>
     <dimen name="profile_separator">164dp</dimen>
+    <dimen name="profile_separator_landscape">96dp</dimen>
 </resources>
