--- a/app/src/main/res/layout/activity_student_main.xml
+++ b/app/src/main/res/layout/activity_student_main.xml
@@ -36,7 +36,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.432"
-        style="?android:attr/buttonBarButtonStyle"/>
+        style="?android:attr/buttonBarButtonStyle"
+        android:fontFamily="cursive"/>
 
     <Button
         android:id="@+id/buttonPrevResults"
@@ -53,7 +54,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonStart"
         app:layout_constraintVertical_bias="0.0"
-        style="?android:attr/buttonBarButtonStyle"/>
+        style="?android:attr/buttonBarButtonStyle"
+        android:fontFamily="cursive"/>
 
     <LinearLayout
         style="?attr/buttonBarStyle"
