--- a/app/src/main/res/layout-land/activity_reding_test.xml
+++ b/app/src/main/res/layout-land/activity_reding_test.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.student.TestActivity">
+    tools:context=".ui.student.testActivities.ReadingTestActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
