--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -77,13 +76,14 @@
             android:id="@+id/idLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/action_log_out"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="14sp"
-            app:backgroundTint="@android:color/holo_red_light"
             android:layout_below="@id/idRoleProfile"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/profile_separator"
-            android:layout_centerHorizontal="true"/>
+            android:background="@drawable/round_borders_logout"
+            android:hint="@string/action_log_out"
+            android:textColor="@android:color/primary_text_dark"
+            android:textSize="14sp"
+            app:background="@drawable/round_borders" />
 
         <TextView
             android:id="@+id/idEmailProfile"
@@ -96,7 +96,8 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:textSize="22sp"
             app:layout_constraintHorizontal_bias="1.0"
-            android:fontFamily="cursive"/>
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"/>
 
         <TextView
             android:id="@+id/idNameProfile"
@@ -110,7 +111,8 @@
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_alignParentStart="true"
             android:layout_below="@id/idEmailProfile"
-            android:fontFamily="cursive"/>
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"/>
 
         <TextView
             android:id="@+id/idRoleProfile"
@@ -124,7 +126,8 @@
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_alignParentStart="true"
             android:layout_below="@id/idNameProfile"
-            android:fontFamily="cursive"/>
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"/>
 
     </RelativeLayout>
 
