--- a/app/src/main/res/layout/activity_student_main.xml
+++ b/app/src/main/res/layout/activity_student_main.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:enabled="true"
         android:text="@string/Start_Test"
-        android:textColor="@android:color/secondary_text_dark"
+        android:textColor="@android:color/primary_text_dark"
         android:textSize="32sp"
         app:backgroundTint="@color/material_on_background_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/See_past_results"
-        android:textColor="@android:color/secondary_text_dark"
+        android:textColor="@android:color/primary_text_dark"
         android:textSize="32sp"
         app:backgroundTint="@color/material_on_background_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
