--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_vertical_margin">24dp</dimen>
     <dimen name="profile_separator">164dp</dimen>
     <dimen name="profile_separator_landscape">96dp</dimen>
+    <dimen name="test_header">204dp</dimen>
     <dimen name="textSize">24sp</dimen>
 </resources>
