--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -86,12 +86,25 @@
             app:background="@drawable/round_borders" />
 
         <TextView
-            android:id="@+id/idEmailProfile"
-            android:layout_width="match_parent"
+            android:id="@+id/idEmailHint"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textSize="22sp"
+            android:hint="@string/prompt_email"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"/>
+
+        <TextView
+            android:id="@+id/idEmailProfile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/idEmailHint"
+            android:layout_toRightOf="@+id/idEmailHint"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:textSize="22sp"
@@ -100,17 +113,46 @@
             android:textColor="@android:color/primary_text_dark"/>
 
         <TextView
+            android:id="@+id/idNameHint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:textSize="22sp"
+            android:hint="@string/prompt_name"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_below="@id/idEmailHint"
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"/>
+
+        <TextView
             android:id="@+id/idNameProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:textSize="22sp"
+            android:layout_toEndOf="@+id/idNameHint"
+            android:layout_toRightOf="@+id/idNameHint"
             app:layout_constraintHorizontal_bias="1.0"
-            android:layout_alignParentStart="true"
             android:layout_below="@id/idEmailProfile"
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"/>
+
+        <TextView
+            android:id="@+id/idRoleHint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textSize="22sp"
+            android:hint="@string/role_spinner"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_below="@id/idNameHint"
             android:fontFamily="cursive"
             android:textColor="@android:color/primary_text_dark"/>
 
@@ -118,13 +160,12 @@
             android:id="@+id/idRoleProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_toEndOf="@+id/idRoleHint"
+            android:layout_toRightOf="@+id/idRoleHint"
             android:textSize="22sp"
             app:layout_constraintHorizontal_bias="1.0"
-            android:layout_alignParentStart="true"
             android:layout_below="@id/idNameProfile"
             android:fontFamily="cursive"
             android:textColor="@android:color/primary_text_dark"/>
