--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -83,7 +83,7 @@
             android:hint="@string/action_log_out"
             android:textColor="@android:color/primary_text_dark"
             android:textSize="14sp"
-            app:background="@drawable/round_borders" />
+            app:background="@drawable/round_borders_logout" />
 
         <TextView
             android:id="@+id/idEmailProfile"
