--- a/app/src/main/res/layout/activity_reding_test.xml
+++ b/app/src/main/res/layout/activity_reding_test.xml
@@ -8,22 +8,24 @@
 
     <RelativeLayout
         android:id="@+id/Header"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/test_header"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/idTitle3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:fontFamily="cursive"
+            android:gravity="center_horizontal"
             android:text="@string/Reading"
+            android:textAlignment="center"
             android:textColor="@android:color/holo_orange_dark"
             android:textSize="36sp"
-            android:textStyle="bold"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:textAlignment="center"
-            android:gravity="center_horizontal" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/idTitleExercise"
@@ -31,8 +33,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/idTitle3"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:gravity="center_horizontal"
-            android:text="@string/Title"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp" />
@@ -42,12 +45,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/idTitleExercise"
-            android:textColor="@color/white"
-            android:text="Instructions of the test will be replaced with the actual"
-            android:textAlignment="center"
-            android:gravity="center_horizontal"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:textSize="14sp"/>
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:gravity="center_horizontal"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -58,18 +62,34 @@
         <TextView
             android:id="@+id/exercise_text"
             android:layout_width="wrap_content"
+            android:layout_height="@dimen/profile_separator"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:gravity="center_horizontal"
+            android:overScrollMode="ifContentScrolls"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarStyle="outsideInset"
+            android:scrollbars="vertical"
+            android:textAlignment="center"
+            android:verticalScrollbarPosition="right" />
+
+        <ListView
+            android:id="@+id/choices"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:gravity="center_horizontal"
-            android:text="Exercise content, this is a test of the content which will
-             be replaced later with the actual text off the exercise"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin" />
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_below="@id/exercise_text"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:scrollbars="vertical"/>
 
         <Button
+            android:id="@+id/finishTest"
             android:layout_width="64dp"
             android:layout_height="36dp"
-            android:layout_below="@id/exercise_text"
+            android:layout_below="@id/choices"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:background="@drawable/round_borders"
