--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:fontFamily="cursive"
-    android:textSize="38sp"
-    android:textAlignment="center"
     android:gravity="center_horizontal"
-    android:textColor="@color/material_on_background_disabled"/>
+    android:textAlignment="center"
+    android:textColor="@android:color/primary_text_dark"
+    android:textSize="38sp" />
