--- a/app/src/main/res/layout/activity_choose_test.xml
+++ b/app/src/main/res/layout/activity_choose_test.xml
@@ -39,8 +39,11 @@
             android:id="@+id/idListView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/icons"
+            android:layout_toRightOf="@+id/icons"
             tools:layout_editor_absoluteX="82dp"
-            android:dividerHeight="2dp"/>
+            android:dividerHeight="2dp"
+            android:entries="@array/choose"/>
 
         <LinearLayout
             android:id="@+id/icons"
@@ -54,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="18dp"
+                android:layout_marginTop="13dp"
                 android:contentDescription="@string/iconReading"
                 app:srcCompat="@drawable/ic_listening"
                 tools:srcCompat="@drawable/ic_listening"
@@ -66,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="26dp"
                 android:contentDescription="@string/iconReading"
                 app:srcCompat="@drawable/ic_vocabulary"
                 tools:srcCompat="@drawable/ic_vocabulary"
@@ -78,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="26dp"
                 android:contentDescription="@string/iconReading"
                 app:srcCompat="@drawable/ic_writing"
                 tools:srcCompat="@drawable/ic_writing"
@@ -90,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="26dp"
                 android:contentDescription="@string/iconReading"
                 app:srcCompat="@drawable/ic_speaking"
                 tools:srcCompat="@drawable/ic_speaking"
@@ -101,7 +104,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="26dp"
                 android:contentDescription="@string/iconReading"
                 app:srcCompat="@drawable/ic_reading"
                 tools:srcCompat="@drawable/ic_reading"
