--- a/app/src/main/res/layout-land/activity_choose_difficulty.xml
+++ b/app/src/main/res/layout-land/activity_choose_difficulty.xml
@@ -6,29 +6,91 @@
     android:layout_height="match_parent"
     tools:context=".ui.student.ChooseDifficultyActivity">
 
-    <ListView
-        android:id="@+id/idListView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="196dp"
-        android:layout_marginBottom="196dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="116dp" />
 
-    <TextView
-        android:id="@+id/textView"
+
+    <RelativeLayout
+        android:id="@+id/Separator"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/profile_separator_landscape"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:hint="@string/Difficulty"
+            android:textColor="@android:color/holo_orange_dark"
+            android:textColorHint="@android:color/holo_orange_dark"
+            android:textSize="36sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:fontFamily="cursive"
+            android:textAlignment="center"
+            android:gravity="center_horizontal" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:hint="@string/Difficulty"
-        android:textColor="@android:color/holo_orange_dark"
-        android:textColorHint="@android:color/holo_orange_dark"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/Separator"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/idListView2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/icons"
+            android:layout_toRightOf="@+id/icons"
+            tools:layout_editor_absoluteX="82dp"
+            android:dividerHeight="2dp"
+            android:entries="@array/difficulties"/>
+
+        <LinearLayout
+            android:id="@+id/icons"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/idIconListening"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="48dp"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="14dp"
+                android:contentDescription="@string/iconReading"
+                android:scaleType="center"
+                app:srcCompat="@drawable/ic_diff_one"
+                tools:srcCompat="@drawable/ic_diff_one" />
+
+            <ImageView
+                android:id="@+id/idIconVocabulary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="48dp"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="26dp"
+                android:contentDescription="@string/iconReading"
+                app:srcCompat="@drawable/ic_diff_two"
+                tools:srcCompat="@drawable/ic_diff_two"
+                android:scaleType="center"/>
+
+            <ImageView
+                android:id="@+id/idIconWriting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="48dp"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="23dp"
+                android:contentDescription="@string/iconReading"
+                android:scaleType="center"
+                app:srcCompat="@drawable/ic_diff_three"
+                tools:srcCompat="@drawable/ic_diff_three" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
