--- a/app/src/main/res/layout-land/activity_profile.xml
+++ b/app/src/main/res/layout-land/activity_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -40,7 +39,7 @@
             android:enabled="false"
             android:fontFamily="cursive"
             android:text="@string/Profile"
-            android:textColor="@android:color/tertiary_text_light"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="42sp"
             app:backgroundTint="@android:color/holo_orange_dark"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -51,63 +50,129 @@
         android:id="@+id/Separator"
         android:layout_width="match_parent"
         android:layout_height="@dimen/profile_separator_landscape"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/idTitle3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="cursive"
+            android:text="@string/Title"
+            android:textColor="@android:color/holo_orange_dark"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            android:layout_marginTop="25dp"
+            android:textAlignment="center"
+            android:gravity="center_horizontal" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@id/Separator"
+        app:layout_constraintBottom_toTopOf="@id/linearLayout"
+        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/idLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/idRoleProfile"
-            android:layout_marginStart="317dp"
-            android:layout_marginLeft="317dp"
-            android:layout_marginTop="36dp"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/round_borders_logout"
             android:hint="@string/action_log_out"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="12sp"
-            app:backgroundTint="@android:color/holo_red_light" />
+            android:textColor="@android:color/primary_text_dark"
+            android:textSize="14sp"
+            app:background="@drawable/round_borders_logout" />
+
+        <TextView
+            android:id="@+id/idEmailHint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:textSize="22sp"
+            android:hint="@string/prompt_email"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"
+            android:layout_marginStart="@dimen/activity_horizontal_margin" />
 
         <TextView
             android:id="@+id/idEmailProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/idEmailHint"
+            android:layout_toRightOf="@+id/idEmailHint"
+
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:textSize="22sp"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin" />
+
+        <TextView
+            android:id="@+id/idNameHint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:textSize="16sp"
-            app:layout_constraintHorizontal_bias="1.0" />
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:textSize="22sp"
+            android:hint="@string/prompt_name"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_below="@id/idEmailHint"
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"
+            android:layout_marginStart="@dimen/activity_horizontal_margin" />
 
         <TextView
             android:id="@+id/idNameProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/idNameHint"
+            android:layout_toRightOf="@+id/idNameHint"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:textSize="22sp"
+            app:layout_constraintHorizontal_bias="1.0"
             android:layout_below="@id/idEmailProfile"
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin" />
+
+        <TextView
+            android:id="@+id/idRoleHint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:textSize="16sp"
-            app:layout_constraintHorizontal_bias="1.0" />
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textSize="22sp"
+            android:hint="@string/role_spinner"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_below="@id/idNameHint"
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"
+            android:layout_marginStart="@dimen/activity_horizontal_margin" />
 
         <TextView
             android:id="@+id/idRoleProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/idNameProfile"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_toEndOf="@+id/idRoleHint"
+            android:layout_toRightOf="@+id/idRoleHint"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:textSize="16sp"
-            app:layout_constraintHorizontal_bias="1.0" />
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:textSize="22sp"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_below="@id/idNameProfile"
+            android:fontFamily="cursive"
+            android:textColor="@android:color/primary_text_dark"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin" />
 
     </RelativeLayout>
 
