--- a/app/src/main/res/layout-land/activity_student_main.xml
+++ b/app/src/main/res/layout-land/activity_student_main.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:enabled="true"
         android:text="@string/Start_Test"
-        android:textColor="@color/white"
+        android:textColor="@android:color/primary_text_dark"
         android:textSize="32sp"
         app:backgroundTint="@color/material_on_background_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,7 +36,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.432"
-        style="?android:attr/buttonBarButtonStyle"/>
+        style="?android:attr/buttonBarButtonStyle"
+        android:fontFamily="cursive"/>
 
     <Button
         android:id="@+id/buttonPrevResults"
@@ -44,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/See_past_results"
-        android:textColor="@color/white"
+        android:textColor="@android:color/primary_text_dark"
         android:textSize="32sp"
         app:backgroundTint="@color/material_on_background_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +54,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonStart"
         app:layout_constraintVertical_bias="0.0"
-        style="?android:attr/buttonBarButtonStyle"/>
+        style="?android:attr/buttonBarButtonStyle"
+        android:fontFamily="cursive"/>
 
     <LinearLayout
         style="?attr/buttonBarStyle"
@@ -73,7 +75,7 @@
             android:enabled="false"
             android:fontFamily="cursive"
             android:text="@string/Test"
-            android:textColor="@android:color/tertiary_text_light"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="42sp"
             app:backgroundTint="@android:color/holo_orange_dark"
             app:layout_constraintBottom_toBottomOf="parent"
