--- a/app/src/main/res/layout-land/activity_vocabulary_test.xml
+++ b/app/src/main/res/layout-land/activity_vocabulary_test.xml
@@ -4,28 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.student.testActivities.ReadingTestActivity">
+    tools:context=".ui.student.testActivities.VocabularyTestActivity">
 
     <RelativeLayout
         android:id="@+id/Header"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/test_header"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/idTitle3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:fontFamily="cursive"
-            android:gravity="center_horizontal"
-            android:text="@string/Reading"
-            android:textAlignment="center"
+            android:text="@string/Vocabulary"
             android:textColor="@android:color/holo_orange_dark"
             android:textSize="36sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textAlignment="center"
+            android:gravity="center_horizontal" />
 
         <TextView
             android:id="@+id/idTitleExercise"
@@ -33,9 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/idTitle3"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:gravity="center_horizontal"
+            android:text="@string/Title"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp" />
@@ -45,13 +42,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/idTitleExercise"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:gravity="center_horizontal"
-            android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:text="Instructions of the test will be replaced with the actual"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textSize="14sp"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -62,34 +58,20 @@
         <TextView
             android:id="@+id/exercise_text"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/profile_separator"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:gravity="center_horizontal"
-            android:overScrollMode="ifContentScrolls"
-            android:scrollbarAlwaysDrawVerticalTrack="true"
-            android:scrollbarStyle="outsideInset"
-            android:scrollbars="vertical"
-            android:textAlignment="center"
-            android:verticalScrollbarPosition="right" />
-
-        <ListView
-            android:id="@+id/choices"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:gravity="center_horizontal"
+            android:text="Exercise content, this is a test of the content which will
+                be replaced later with an audio file to be played and
+                proceed with the exercise"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_below="@id/exercise_text"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:scrollbars="vertical"/>
+            android:layout_marginRight="@dimen/activity_horizontal_margin" />
 
         <Button
             android:id="@+id/finishTest"
             android:layout_width="64dp"
             android:layout_height="36dp"
-            android:layout_below="@id/choices"
+            android:layout_below="@id/exercise_text"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:background="@drawable/round_borders"
